changed PastEvaluations color scheme and made it dynamic

--- a/packages/client/src/pages/PastEvaluations.css
+++ b/packages/client/src/pages/PastEvaluations.css
@@ -142,13 +142,13 @@ html, body, #root {
 }
 
 .display-cell.student-selected {
-  background-color: #4CAF50;
-  border-color: #388E3C;
+  background-color: var(--studentBgColor);
+  border-color: var(--studentBorderColor);
 }
 
 .display-cell.supervisor-selected {
-  background-color: #ed091c;
-  border-color: #f50115;
+  background-color: var(--supervisorBgColor);
+  border-color: var(--supervisorBorderColor);
 }
 
 .display-cell.both-selected {
