--- a/packages/client/src/pages/PastEvaluations.css
+++ b/packages/client/src/pages/PastEvaluations.css
@@ -157,3 +157,17 @@ html, body, #root {
   background-color:var(--bothBgColor);
   /* border-color: #f5a504; */
 }
+
+.legend-outer {
+  align-items: flex-start;
+  display: flex;
+  flex-direction: row; 
+  margin: 2vh; 
+  width: 33%;
+}
+
+.legend-item-container {
+  align-items: center;
+  display: flex;
+  margin: 4px;
+}
