--- a/packages/client/src/pages/login.css
+++ b/packages/client/src/pages/login.css
@@ -1,28 +1,3 @@
-body {
-  background-color: aqua;
-}
-
-/* .card {
-  padding: 2em;
-} */
-
-button {
- background-color: #ffffff; 
- color: rgb(0, 0, 0);
- padding: 12px 24px;
- font-size: 16px;
- border: 1px solid black;
- border-radius: 8px;
- cursor: pointer;
- transition: background-color 0.3s ease;
- width: 100px;
- margin-bottom: 5px;
-}
-
-button:hover {
- background-color: #80b1ed;
-}
-
 .centered-page{
   display: flex;
   flex-direction: column;
@@ -32,26 +7,12 @@ button:hover {
  height: fit-content;
 }
 
-.centered-page h1 {
-  text-align: center;
-}
-
 .button-group {
- display: flex !important;
- flex-direction: column !important;
- align-items: center !important;
- gap: 12px !important;
- width:100vw;
- /* height: 100vh; */
-}
-
-.page {
  display: flex;
- justify-content: center;
+ flex-direction: column;
  align-items: center;
- height: fit-content;
- width: 100vw;
- 
+ gap: 12px;
+ width:100vw;
 }
 
 .signup-card {
@@ -81,47 +42,9 @@ button:hover {
  flex-direction: column;
 }
 
-/* .signup-card label {
- margin-bottom: 4px;
- font-weight: 500;
-} */
-
 .signup-card input {
  margin-bottom: 12px;
  padding: 8px;
  border: 1px solid #ccc;
  border-radius: 4px;
-}
-
-.signup-card button {
- padding: 10px;
- background-color: #1a1a40;
- color: white;
- border: none;
- border-radius: 4px;
- cursor: pointer;
-}
-
-.signup-card button:hover {
- background-color: #333366;
-}
-
-.error {
- color: red;
- font-size: 0.8rem;
- margin-top: -10px;
- margin-bottom: 10px;
-}
-
-
-.radio-group {
- display: flex;
- justify-content: center;
- gap: 1rem;
- margin-bottom: 12px;
-}
-
-
-.radio-group label {
- font-weight: normal;
 }
