student select styled to fit page + eval.tsx and studentselect.tsx buttons + cards now moved

--- a/packages/client/src/layouts/Layout.css
+++ b/packages/client/src/layouts/Layout.css
@@ -9,7 +9,7 @@
   box-sizing: border-box;
   flex: 1;
   background-color: #f0f2f5;
-  overflow: scroll;
+  /* overflow: scroll; */
   display: grid;
   grid-template-columns: 1fr; /* Single column layout */
   flex-direction: column;
