--- a/packages/client/src/components/ButtonAndCard.css
+++ b/packages/client/src/components/ButtonAndCard.css
@@ -551,7 +551,7 @@ CARDS
 }
 /* end of home cards */
 
-/* EVAL CARDS */
+/* EVALUATIONS CARDS */
 .eval-cards {
   background-color: #ffffff;
   border-radius: 12px;
